# src/main/java/com/intellecteu/onesource/integration/api/cloudevents/CloudSystemEventConstants.java
@@ -1,16 +1,0 @@
-package com.intellecteu.onesource.integration.api.cloudevents;
-
-import lombok.experimental.UtilityClass;
-
-@UtilityClass
-class CloudSystemEventConstants {
-
-    static final String ID = "id";
-    static final String TYPE = "type";
-    static final String SOURCE = "source";
-    static final String SUBJECT = "subject";
-    static final String TIME = "time";
-    static final String RELATED_PROCESS = "relatedprocess";
-    static final String RELATED_SUBPROCESS = "relatedsubprocess";
-
-}
