# src/main/resources/toolkit_openapi.yaml
@@ -52,9 +52,18 @@ components:
         dataContentType:
           type: string
         data:
-          type: string
+          $ref: '#/components/schemas/CloudEventData'
         processingStatus:
           $ref: '#/components/schemas/ProcessingStatus'
+    CloudEventData:
+      type: object
+      properties:
+        message:
+          type: string
+        fieldsImpacted:
+          $ref: '#/components/schemas/FieldsImpacted'
+        relatedObjects:
+          $ref: '#/components/schemas/RelatedObjects'
     Collateral:
       required:
         - collateralValue
@@ -231,6 +240,28 @@ components:
         cutoffTime:
           pattern: "([01]?[0-9]|2[0-3]):[0-5][0-9]"
           type: string
+    FieldImpacted:
+      type: object
+      properties:
+        fieldSource:
+          type: string
+          enum:
+            - ONE_SOURCE_LOAN_CONTRACT
+            - ONE_SOURCE_RERATE
+        fieldName:
+          type: string
+        fieldValue:
+          type: string
+        fieldExceptionType:
+          type: string
+          enum:
+            - DISCREPANCY
+            - MISSING
+            - UNMATCHED
+    FieldsImpacted:
+      type: array
+      items:
+        $ref: '#/components/schemas/FieldImpacted'
     FixedRate:
       type: object
       properties:
@@ -411,6 +442,17 @@ components:
           $ref: '#/components/schemas/FixedRate'
         floating:
           $ref: '#/components/schemas/FloatingRate'
+    RelatedObject:
+      type: object
+      properties:
+        relatedObjectId:
+          type: string
+        relatedObjectType:
+          type: string
+    RelatedObjects:
+      type: array
+      items:
+        $ref: '#/components/schemas/RelatedObject'
     RelatedProposalType:
       type: string
       enum:
@@ -589,10 +631,6 @@ paths:
           in: query
           schema:
             type: string
-        - name: specVersion
-          in: query
-          schema:
-            type: string
         - name: type
           in: query
           schema:
@@ -605,16 +643,34 @@ paths:
           in: query
           schema:
             type: string
-        - name: startTime
+        - name: sinceTime
+          in: query
+          description: Cloud events (since) time, included, in the format 'yyyy-MM-dd'
+          schema:
+            type: string
+            format: date
+        - name: beforeTime
+          in: query
+          description: Cloud events (before) time, excluded, in the format 'yyyy-MM-dd'
+          schema:
+            type: string
+            format: date
+        - name: relatedProcess
           in: query
           schema:
             type: string
-            format: date-time
-        - name: endTime
+        - name: relatedSubProcess
           in: query
           schema:
             type: string
-            format: date-time
+        - name: relatedObjectId
+          in: query
+          schema:
+            type: string
+        - name: relatedObjectType
+          in: query
+          schema:
+            type: string
         - name: sort
           in: query
           description: Sort by specified fields (e.g., 'type,-time').
@@ -644,7 +700,7 @@ paths:
         '500':
           description: Internal Server Error
 
-  /cloudevent/{id}:
+  /cloudevents/{id}:
     get:
       summary: Retrieve a specific CloudEvent by ID
       parameters:
@@ -927,8 +983,8 @@ paths:
       requestBody:
         $ref: '#/components/requestBodies/DeclineInstruction'
       responses:
-        '201':
-          description: Decline instruction successfully created
+        '202':
+          description: Decline instruction creation action accepted
           content:
             application/json:
               schema:
